--- a/src/resources/log4j2.properties
+++ b/src/resources/log4j2.properties
@@ -1,18 +1,37 @@
 name=PropertiesConfig
-property.filename = logs
-appenders = console, file
+status = error
+property.filename = logs/rollingtest.log
+appenders = console, rolling
+filter.threshold.type = ThresholdFilter
+filter.threshold.level = debug
 
 appender.console.type = Console
 appender.console.name = STDOUT
 appender.console.layout.type = PatternLayout
 appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
 
-appender.file.type = File
-appender.file.name = LOGFILE
-appender.file.fileName="${logfilename}.log
-appender.file.layout.type=PatternLayout
-appender.file.layout.pattern=[%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.rolling.type = RollingFile
+appender.rolling.name = RollingFile
+appender.rolling.fileName = logs/app.log
+appender.rolling.filePattern = logs/%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.layout.type = PatternLayout
+appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.rolling.policies.type = Policies
+#appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+#appender.rolling.policies.time.interval = 2
+#appender.rolling.policies.time.modulate = true
+appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
+appender.rolling.policies.size.size=100MB
+appender.rolling.strategy.type = DefaultRolloverStrategy
+
+logger.rolling.name = com.airwallex.codechallenge.app
+logger.rolling.level = DEBUG
+logger.rolling.additivity = false
+logger.rolling.appenderRef.rolling.ref = RollingFile
 
 rootLogger.level = debug
-rootLogger.appenderRefs = stdout
 rootLogger.appenderRef.stdout.ref = STDOUT
+
+
+
+
