--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 /output/
 /logs/
 /.gradle/
+/shelf/
+/workspace.xml
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
