--- a/src/resources/log4j2.properties
+++ b/src/resources/log4j2.properties
@@ -1,37 +1,52 @@
-name=PropertiesConfig
-status = error
-property.filename = logs/rollingtest.log
-appenders = console, rolling
-filter.threshold.type = ThresholdFilter
-filter.threshold.level = debug
+name= properties_configuration
 
+# Give directory path where log files should get stored
+property.basePath = ./logs/
+
+# ConsoleAppender will print logs on console
 appender.console.type = Console
-appender.console.name = STDOUT
+appender.console.name = consoleLogger
+appender.console.filter.threshold.type = ThresholdFilter
+appender.console.filter.threshold.level = DEBUG
+appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%-5level] %d{yyyy-MM-dd HH:mm:ss.SSS} [%t] %c{1} - %msg%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%c] [%M] [%l] - %msg%n
 
+# RollingFileAppender will print logs in file which can be rotated based on time or size
 appender.rolling.type = RollingFile
-appender.rolling.name = RollingFile
-appender.rolling.fileName = logs/app.log
-appender.rolling.filePattern = logs/%d{MM-dd-yy-HH-mm-ss}-%i.log.gz
+appender.rolling.name = fileLogger
+appender.rolling.filter.threshold.type = ThresholdFilter
+appender.rolling.filter.threshold.level = INFO
+appender.rolling.fileName = ${basePath}app.log
+appender.rolling.filePattern = ${basePath}app_%d{yyyyMMdd}.log.gz
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d %p %C{1.} [%t] %m%n
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%c] [%M] [%l] - %msg%n
 appender.rolling.policies.type = Policies
-#appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-#appender.rolling.policies.time.interval = 2
-#appender.rolling.policies.time.modulate = true
+
+# Rotate log file each day and keep 30 days worth
+appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
+appender.rolling.policies.time.interval = 1
+appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
-appender.rolling.policies.size.size=100MB
+appender.rolling.policies.size.size = 10MB
+
 appender.rolling.strategy.type = DefaultRolloverStrategy
+appender.rolling.strategy.delete.type = Delete
+appender.rolling.strategy.delete.basePath = ${basePath}
+appender.rolling.strategy.delete.maxDepth = 1
+appender.rolling.strategy.delete.ifLastModified.type = IfLastModified
+# Delete files older than 30 days
+appender.rolling.strategy.delete.ifLastModified.age = 30d
 
-logger.rolling.name = com.airwallex.codechallenge.app
-logger.rolling.level = DEBUG
-logger.rolling.additivity = false
-logger.rolling.appenderRef.rolling.ref = RollingFile
+# Mention package name here in place of example. Classes in this package or subpackages will use ConsoleAppender and RollingFileAppender for logging
+logger.example.name = com.airwallex.codechallenge.app
+logger.example.level = DEBUG
+logger.example.additivity = false
+logger.example.appenderRef.rolling.ref = fileLogger
+logger.example.appenderRef.console.ref = consoleLogger
 
-rootLogger.level = debug
-rootLogger.appenderRef.stdout.ref = STDOUT
-
-
-
-
+# Configure root logger for logging error logs in classes which are in package other than above specified package
+rootLogger.level = DEBUG
+rootLogger.additivity = false
+rootLogger.appenderRef.rolling.ref = fileLogger
+rootLogger.appenderRef.console.ref = consoleLogger
