--- a/src/resources/log4j2.properties
+++ b/src/resources/log4j2.properties
@@ -1,7 +1,7 @@
 name= properties_configuration
 
 # Give directory path where log files should get stored
-property.basePath = ./logs/
+property.basePath = ./logs
 
 # ConsoleAppender will print logs on console
 appender.console.type = Console
@@ -10,32 +10,36 @@ appender.console.filter.threshold.type = ThresholdFilter
 appender.console.filter.threshold.level = DEBUG
 appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%l] - %msg%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | ThreadID %tid | %t | %level | %l | %msg%n
+
 
 # RollingFileAppender will print logs in file which can be rotated based on time or size
 appender.rolling.type = RollingFile
 appender.rolling.name = fileLogger
 appender.rolling.filter.threshold.type = ThresholdFilter
 appender.rolling.filter.threshold.level = INFO
-appender.rolling.fileName = ${basePath}app.log
-appender.rolling.filePattern = ${basePath}app_%d{yyyyMMdd}.log.gz
+appender.rolling.activeFileName = ${basePath}/app.log
+appender.rolling.fileName = ${basePath}/app.log
+#appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log.gz
+appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} %level [%t] [%l] - %msg%n
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | ThreadID %tid | %t | %level | %l | %msg%n
 appender.rolling.policies.type = Policies
 
 # Rotate log file each day and keep 30 days worth
 appender.rolling.policies.time.type = TimeBasedTriggeringPolicy
-appender.rolling.policies.time.interval = 1
+appender.rolling.policies.time.interval = 600
 appender.rolling.policies.time.modulate = true
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size = 10MB
 
 appender.rolling.strategy.type = DefaultRolloverStrategy
+
+# Delete logs older than 30 days
 appender.rolling.strategy.delete.type = Delete
 appender.rolling.strategy.delete.basePath = ${basePath}
 appender.rolling.strategy.delete.maxDepth = 1
 appender.rolling.strategy.delete.ifLastModified.type = IfLastModified
-# Delete files older than 30 days
 appender.rolling.strategy.delete.ifLastModified.age = 30d
 
 # Mention package name here in place of example. Classes in this package or subpackages will use ConsoleAppender and RollingFileAppender for logging
@@ -50,3 +54,4 @@ rootLogger.level = DEBUG
 rootLogger.additivity = false
 rootLogger.appenderRef.rolling.ref = fileLogger
 rootLogger.appenderRef.console.ref = consoleLogger
+
