--- a/src/resources/log4j2.properties
+++ b/src/resources/log4j2.properties
@@ -18,7 +18,7 @@ appender.rolling.type = RollingFile
 appender.rolling.name = fileLogger
 appender.rolling.filter.threshold.type = ThresholdFilter
 appender.rolling.filter.threshold.level = INFO
-appender.rolling.activeFileName = ${basePath}/app.log
+#appender.rolling.activeFileName = ${basePath}/app.log
 appender.rolling.fileName = ${basePath}/app.log
 #appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log.gz
 appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log
