update log4j thread information in logger pattern layout

--- a/src/resources/log4j2.properties
+++ b/src/resources/log4j2.properties
@@ -10,7 +10,7 @@ appender.console.filter.threshold.type = ThresholdFilter
 appender.console.filter.threshold.level = DEBUG
 appender.console.target = SYSTEM_OUT
 appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | ThreadID %tid | %t | %level | %l | %msg%n
+appender.console.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | %t | %level | %l | %msg%n
 
 
 # RollingFileAppender will print logs in file which can be rotated based on time or size
@@ -23,7 +23,7 @@ appender.rolling.fileName = ${basePath}/app.log
 #appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log.gz
 appender.rolling.filePattern = ${basePath}/app_%d{yyyyMMdd HH:mm:ss}.log
 appender.rolling.layout.type = PatternLayout
-appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | ThreadID %tid | %t | %level | %l | %msg%n
+appender.rolling.layout.pattern = %d{yyyy-MM-dd HH:mm:ss.SSS} | %t | %level | %l | %msg%n
 appender.rolling.policies.type = Policies
 
 # Rotate log file each day and keep 30 days worth
