--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,9 +18,10 @@ jobs:
         with:
           java-version: 11
           distribution: zulu
-      - uses: eskatos/gradle-command-action@v1
-        with:
-          arguments: testCoverage
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
+      - name: Gradle
+        run: ./gradlew testCoverage
       - name: Upload to Codecov
         uses: codecov/codecov-action@v2.0.2
         with:
