--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on:
       - dev
       - test_workflow
 jobs:
-  gradle:
+  test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
